--- a/AV/List/alistAppendCON.json
+++ b/AV/List/alistAppendCON.json
@@ -1,11 +1,11 @@
 {
   "translations" :{
     "en": {
-      "av_c1": "Inserting at the tail of the list is easy",
-      "av_c2": "We will append the value 23",
-      "av_c3": "First check that the array has a free slot",
-      "av_c4": "Now simply insert the value into the empty position, and update <code>listSize</code>",
-      "av_c5": "The append operation therefore requires $\\Theta(1)$ time"
+      "av_c1": "Inserting at the tail of the list is easy.",
+      "av_c2": "We will append the value 23.",
+      "av_c3": "First check that the array has a free slot.",
+      "av_c4": "Now simply insert the value into the empty position, and update <code>listSize</code>.",
+      "av_c5": "The append operation therefore requires $\\Theta(1)$ time."
     }
   },
   "code" : {
